added gameBox content placeholders

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-<body class="everywhere">
+<body class="everywhere fontColor">
+
     <header class="header" class="container">
         <h1> Hangman</h1>
         <h2> Matrix Style</h2>
@@ -17,6 +18,27 @@
     <!-- Name of Guessed word displayed above wholeGamebox-->
 
     <div id="wholeGamebox" class="container">
+        <h3>
+            Press any key to get started!
+        </h3>
+        <div>
+            <p>
+                Total Wins:
+            </p>
+            <p>
+                # of Guesses Remaining:
+            </p>
+                </br>
+            <p>
+                Letters Already Guessed:
+            </p>
+            <p>
+                Current Word:
+            </p>
+            <p class="hangmanWord">
+                _ _ _ _ _ _ _ _ _ _ _ _ _ 
+            </p>
+        </div>
         <!--Add 2 section within the wholeGamebox
             1) Picture
             2) In decending order
