made tons of changes including help from Tom, Abdul, and John, didn't note them all, still tons to do.

--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
         </h3>
 
         <div>
-            <!--For Total Wins: Display each time the word was guessed correctly/fully before the # of guesses remaining count down reaches 0-->
-            <p>
+            <p id="wins">
                 Total Wins:
             </p>
-            <!--For # of Guesses, countdown through an array from 12 to 0
-                This will need to reset to 12 after reaching 0-->
-            <p>
+            <p id="remainingGuesses">
                 # of Guesses Remaining:
             </p>
-            <p>
+            <p id="guesses">
                 Letters Already Guessed:
             </p>
                 </br>
@@ -38,8 +35,8 @@
                 Current Word:
             </p>
                 </br>
-            <p class="hangmanWord">
-                _ _ _ _ _ _ _ _ _ _ _ _ _ 
+            <p id="currentHangmanWord">
+                
             </p>
         </div>
 
