--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 Current Word:
             </p>
                 </br>
-            <p id="currentHangmanWord">
+            <h3 id="currentHangmanWord">
                 
-            </p>
+            </h3>
         </div>
 
         <div class="imageDisplaydiv">
